opam-version: "2.0"
name: "fpat"
version: "v20241224"
maintainer: "Ryosuke SATO <rsato@acm.org>"
authors: [
  "Hiroshi Unno <uhiro@cs.tsukuba.ac.jp>"
]
homepage: "https://github.com/ryosu-sato/fpat"
dev-repo: "git+https://github.com/ryosu-sato/fpat.git"
bug-reports: "https://github.com/ryosu-sato/fpat/issues"
build: [
  ["autoconf"]
  ["./configure"]
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocamlfind"
  "num"
  "batteries"
  "zarith"
  "atp"
  "csisat"
  "z3"
  "apron"
  "conf-autoconf"
]
synopsis: "A framework for program analysis and transformation"
